@@ -68,6 +68,7 @@
               classpath="${env.S1AS_HOME}/lib/javaee.jar:${env.S1AS_HOME}/lib/appserv-rt.jar:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${se.client}">
            <sysproperty key="org.omg.CORBA.ORBInitialPort" value="${orb.port}"/>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
            <arg line="${jndiroot}"/>
         </java>
     </target>
